# Rydberg_pulse_design

./: .gitignore  Manifest.toml  Project.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
AdiabaticEvolution.jl/: Manifest.toml  Project.toml  README.md
AdiabaticEvolution.jl/.github/workflows/: CI.yml
AdiabaticEvolution.jl/docs/: Project.toml  make.jl
AdiabaticEvolution.jl/src/: AdiabaticEvolution.jl  twoleveltransmission.jl
AdiabaticEvolution.jl/test/: runtests.jl
EigenVal.jl/: Manifest.toml  Project.toml  README.md
EigenVal.jl/docs/: Project.toml  make.jl
EigenVal.jl/src/: EigenVal.jl
EigenVal.jl/test/: runtests.jl
GateImplementation_jpynb/: LICENSE  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json
GateImplementation_jpynb/ investigation/: MesoscopicRydbergGate.typ  figure.md
GateImplementation_jpynb/cnot4gate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
GateImplementation_jpynb/ipynb examples/: c2not_3qubits.ipynb  cnot2_2qubits.ipynb  cnot2_2qubits_blockade.ipynb  cnot2_3qubits.ipynb  cnot2_nointeraction.ipynb  cnot4_2qubits.ipynb  cnot4_3qubits.ipynb  cnot4_5qubits.ipynb
OptimalParity.jl/: LICENSE  Manifest.toml  Project.toml  README.md
OptimalParity.jl/docs/: Project.toml  make.jl
OptimalParity.jl/src/: OptimalParity.jl  pulseopt.jl
OptimalParity.jl/test/: pulseopt.jl  runtests.jl
RydbergPulseDesign/: .gitignore  LICENSE  Project.toml  README.md
RydbergPulseDesign/docs/: make.jl
RydbergPulseDesign/src/: ARP_pulse.jl  AdiabaticEvolution.jl  eig_function.jl  eigenval.jl  three_level_atom.jl
RydbergPulseDesign/test/: ARP_pulse.jl  ARP_pulse_2.jl  runtests.jl  three_level_atom.jl
WandaPulse/: Makefile  README.md  cnot4_3qubits.ipynb  main.py  pyproject.toml
WandaPulse/notebooks/: C2NOT_Expected states.ipynb  Untitled-1.ipynb  cnot4_3qubits.ipynb  cnot4_3qubits_jax.ipynb
cnot4gate/: c2not_3qubits.ipynb  cnot2_2qubits.ipynb  cnot2_3qubits.ipynb  cnot4_2qubits.ipynb  cnot4_3qubits.ipynb  setup.py
cnot4gate/cnot4gate/: __init__.py  core.py
cnot4gate/tests/: cnot2_blockade.ipynb  cnot2_nc_1target.ipynb
docs/: CNOT gate through EIT pulse.typ  Measurement-Free Error Correction via Multi-Qubit Syndrome Gate Encoding copy.typ  Measurement-Free Error Correction via Multi-Qubit Syndrome Gate Encoding.typ  MesoscopicRydbergGate.typ  SpecificExperimentalCondition.typ  bibliography.bib  figure.md
literature_review/: example_pulse_design.ipynb
literature_review/20250724/: slides.typ
literature_review/Quantum Control/: slides.typ
measurement-free error corretion/Slides/: MFQEC.typ  figure.md  reference.bib  slides.typ  talk transcript for slides.typ
measurement-free error corretion/Ytype_modulation/: main.typ
measurement-free error corretion/report20251012/: MFQEC.typ  QCA_simulation.typ  reference.bib
src/: ARP_pulse_2.jl  AdiabaticEvolution.jl  OptimalParity.jl  QABopt.jl  QuantumAdiabaticBrachistochrone.jl  eigenval.jl
test/: QABopt.jl  eig_function.jl  eigenvalue.jl  plot_test.jl  runtests.jl  two_level_transmission.jl
(+10 files in other folders)
