[project]
name = "wandapulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]>=0.6.2",
    "matplotlib>=3.10.3",
    "optax>=0.2.5",
    "qutip>=5.2.0",
    "qutip-jax>=0.1.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
